renamed component delnotecreate to delnotecrud

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -1,4 +1,4 @@
-<h4>Create Delivery Note</h4> 
+<h4>{{screenName}}</h4> 
 <div class="container">
 <section class="delnote-form">
   <form (ngSubmit)="onSave()" [formGroup]="delnoteform" class="ordernote-form">
