updated delnote print document

--- a/src/app/shared_prints/delnotedoc/delnotedoc.component.html
+++ b/src/app/shared_prints/delnotedoc/delnotedoc.component.html
@@ -44,7 +44,7 @@
 					</td>
 					<td class="Barcode">
 						<div>
-							<h4 #delNoteBarcode>Delivery Note Barcode</h4>
+							<h4 class="bcode" #delNoteBarcode>77002533</h4>
 						</div>
 					</td>
 				</tr>
@@ -67,6 +67,7 @@
 							<h5 #senderAdd2>01234567890123456789012345678901234567890123456789</h5>
 							<h5 #senderAdd3>01234567890123456789012345678901234567890123456789</h5>
 							<h5 #senderAdd4>01234567890123456789012345678901234567890123456789</h5>
+							<h5 #senderTown>01234567890123456789012345678901234567890123456789</h5>
 						</div>
 					</td>
 					<td class="DocDate" style="width:10%; vertical-align: text-top;">
@@ -145,7 +146,7 @@
 					<td>
 						<div class="footer">
 							<h5>Attard & Co Food is proud to have been entrusted by</h5>
-							<h5 #senderName>01234567890123456789012345678901234567890123456789</h5>
+							<h5 #footerSenderName>01234567890123456789012345678901234567890123456789</h5>
 							<h5>to present you with this Hamper</h5>
 						</div>
 					</td>
@@ -216,8 +217,8 @@
 				<tr class="footer">
 					<td>
 						<div>
-							<h4 #orderNo>Barcode</h4>
-							<h5 #orderNo>012345678901234567890123456789</h5>
+							<h4 class="bcode" #orderNoBarcode>CH17000186</h4>
+							<h5 #orderNo>17000186</h5>
 						</div>
 					</td>
 				</tr>
