--- a/src/app/shared_prints/delnotedoc/delnotedoc.component.html
+++ b/src/app/shared_prints/delnotedoc/delnotedoc.component.html
@@ -60,7 +60,7 @@
 							<h4>By Order Of:</h4>
 						</div>
 					</td>
-					<td class="SenderAddress" style="width:65%; vertical-align: text-top;">
+					<td class="SenderAddress" style="width:55%; vertical-align: text-top;">
 						<div>
 							<h4 #senderName>012345678901234567890123456789012345678</h4>
 							<h5 #senderAdd1>01234567890123456789012345678901234567890123456789</h5>
@@ -75,9 +75,9 @@
 							<h4>Document Date:</h4>
 						</div>
 					</td>
-					<td style="width:10%;vertical-align: text-top;">
+					<td style="width:20%; vertical-align: text-top;">
 						<div>
-							<h4 #docDate>dd/mm/yyyy</h4>
+							<h4 #docDate>dd - mm - yyyy</h4>
 						</div>
 					</td>
 			</table>
@@ -90,12 +90,12 @@
 							<h4>Code</h4>
 						</div>
 					</td>
-					<td style="width:75%">
+					<td style="width:60%">
 						<div>
 							<h4>Description</h4>
 						</div>
 					</td>
-					<td style="text-align:right; padding-right:5px; width:10%">
+					<td style="text-align:left; padding-right:5px; width:35%">
 						<div>
 							<h4>Qty</h4>
 						</div>
@@ -113,12 +113,12 @@
 							<h5 #itemCode>HP0123456789</h5>
 						</div>
 					</td>
-					<td style="width:75%">
+					<td style="width:60%">
 						<div>
-							<h5 #itemDesc>HP0123456789012345678901234567890123456789012345678901234567890123456789</h5>
+							<h5 #itemDesc>HP01234567890123456789012345678901234567890123456789012</h5>
 						</div>
 					</td>
-					<td style="text-align:right; padding-right:5px;width:10%">
+					<td style="text-align:left; padding-right:5px;width:35%;">
 						<div>
 							<h5 #itemQty>0123456789</h5>
 						</div>
