Set delnotedoc with Page size & orientation & qz service to use default

--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -12,7 +12,7 @@
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             <mat-form-field class="delnotehead">
-              <input matInput [matDatepicker]="picker2" [max]="maxDate" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate">
+              <input matInput [matDatepicker]="picker2" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate">
               <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
               <mat-datepicker #picker2></mat-datepicker>
             </mat-form-field>
