--- a/src/app/delnote/delnote.component.html
+++ b/src/app/delnote/delnote.component.html
@@ -9,6 +9,9 @@
             <mat-icon>close</mat-icon>
           </button>
         </mat-form-field>
+        <button mat-raised-button (click)="excelImport()">
+          <mat-icon>XLimport</mat-icon>Create      
+        </button>
       </div>
       <div class="mat-elevation-z8">
         <mat-table [dataSource]="listData"  matSort>
