qz-tray services updated to default printer

--- a/src/app/delnote/delnote.component.html
+++ b/src/app/delnote/delnote.component.html
@@ -10,7 +10,7 @@
           </button>
         </mat-form-field>
         <button mat-raised-button (click)="excelImport()">
-          <mat-icon>XLimport</mat-icon>Create      
+          <mat-icon></mat-icon>XLimport
         </button>
       </div>
       <div class="mat-elevation-z8">
