--- a/src/app/delnote/delnote.component.html
+++ b/src/app/delnote/delnote.component.html
@@ -1,106 +1,110 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
 <div class="DelNotes">
-    <div class="search-div">
-        <button mat-raised-button (click)="createDelNote()">
-          <mat-icon>add</mat-icon>Create      
-        </button>
-        <mat-form-field class="search-form-field" floatLabel="never">
-          <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
-          <button mat-button matSuffix mat-icon-button aria-label="Clear"*ngIf="searchKey"  (click)="onSearchClear()">
-            <mat-icon>close</mat-icon>
+  <div class="search-div">
+    <button mat-raised-button (click)="createDelNote()">
+      <mat-icon>add</mat-icon>Create
+    </button>
+    <mat-form-field class="search-form-field" floatLabel="never">
+      <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+      <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <input type="file" (change)="excelImport($event)" #xlfile accept=".xlsx" name='file' />
+  <div class="mat-elevation-z8">
+    <mat-table [dataSource]="listData" matSort>
+      <ng-container matColumnDef="delnotelineref">
+        <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
+        <mat-cell *matCellDef="let i = index">{{i + 1}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="delnotedate">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Del.N Date</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.delNoteDate | date:'dd-MM-yyyy'}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="delordref">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Instr/.</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.deliveryInstructions}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="deliveryDate">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Del.N Date</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.deliveryDate | date:'dd-MM-yyyy'}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="senderName">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Sender</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.senderName}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="senderTown">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Send Town</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.senderTown}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="senderMessage">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Send Message</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.senderMessage}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverName">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Name</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverName}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverAddr1">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr1</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverAddr1}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverAddr2">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr2</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverAddr2}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverAddr3">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr3</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverAddr3}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverAddr4">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr4</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverAddr4}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverTown">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Town</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverTown}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="receiverPhone">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Phone</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.receiverPhone}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="deliveryInstructions">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Instructions</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.deliveryInstructions}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="status">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.status}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let j = index">
+          <button mat-icon-button (click)="onEditLine(j)">
+            <mat-icon>launch</mat-icon>
           </button>
-        </mat-form-field>
-        <button mat-raised-button (click)="excelImport()">
-          <mat-icon></mat-icon>XLimport
-        </button>
-      </div>
-      <div class="mat-elevation-z8">
-        <mat-table [dataSource]="listData"  matSort>
-          <ng-container matColumnDef="delnotelineref">
-            <mat-header-cell *matHeaderCellDef  mat-sort-header></mat-header-cell>
-            <mat-cell *matCellDef="let i = index">{{i + 1}}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="delnotedate">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Del.N Date</mat-header-cell>
-            <mat-cell *matCellDef="let element">{{element.delNoteDate | date:'dd-MM-yyyy'}}</mat-cell>
-          </ng-container>          
-          <ng-container matColumnDef="delordref">
-            <mat-header-cell *matHeaderCellDef  mat-sort-header>Instr/.</mat-header-cell>
-            <mat-cell *matCellDef="let element">{{element.deliveryInstructions}}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="deliveryDate">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Del.N Date</mat-header-cell>
-            <mat-cell *matCellDef="let element">{{element.deliveryDate | date:'dd-MM-yyyy'}}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="senderName">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Sender</mat-header-cell>
-            <mat-cell *matCellDef="let element">{{element.senderName}}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="senderTown">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Send Town</mat-header-cell>
-              <mat-cell *matCellDef="let element">{{element.senderTown}}</mat-cell>
-          </ng-container>    
-          <ng-container matColumnDef="senderMessage">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Send Message</mat-header-cell>
-              <mat-cell *matCellDef="let element">{{element.senderMessage}}</mat-cell>
-          </ng-container>    
-          <ng-container matColumnDef="receiverName">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Name</mat-header-cell>
-              <mat-cell *matCellDef="let element">{{element.receiverName}}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="receiverAddr1">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr1</mat-header-cell>
-              <mat-cell *matCellDef="let element">{{element.receiverAddr1}}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="receiverAddr2">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr2</mat-header-cell>
-                <mat-cell *matCellDef="let element">{{element.receiverAddr2}}</mat-cell>
-              </ng-container>
-            <ng-container matColumnDef="receiverAddr3">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr3</mat-header-cell>
-              <mat-cell *matCellDef="let element">{{element.receiverAddr3}}</mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="receiverAddr4">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Addr4</mat-header-cell>
-                <mat-cell *matCellDef="let element">{{element.receiverAddr4}}</mat-cell>
-            </ng-container>    
-            <ng-container matColumnDef="receiverTown">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Town</mat-header-cell>
-                <mat-cell *matCellDef="let element">{{element.receiverTown}}</mat-cell>
-            </ng-container>    
-            <ng-container matColumnDef="receiverPhone">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Receiver Phone</mat-header-cell>
-                <mat-cell *matCellDef="let element">{{element.receiverPhone}}</mat-cell>
-              </ng-container>
-              <ng-container matColumnDef="deliveryInstructions">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header>Instructions</mat-header-cell>
-                  <mat-cell *matCellDef="let element">{{element.deliveryInstructions}}</mat-cell>
-              </ng-container>    
-              <ng-container matColumnDef="status">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-                  <mat-cell *matCellDef="let element">{{element.status}}</mat-cell>
-              </ng-container>    
-          <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef="let j = index">
-              <button mat-icon-button (click)="onEditLine(j)"><mat-icon>launch</mat-icon></button>
-              <button mat-icon-button color="warn" (click)="onDeleteLine(j)"><mat-icon>delete_outline</mat-icon></button>
-            </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="loading">
-            <mat-footer-cell *matFooterCellDef colspan="6">
-              Loading data...
-            </mat-footer-cell>
-          </ng-container>
-          <ng-container matColumnDef="noData">
-            <mat-footer-cell *matFooterCellDef colspan="6">
-              No data.
-            </mat-footer-cell>
-          </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          <mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':listData!=null}"></mat-footer-row>
-          <mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(listData!=null && listData.data.length==0)}"></mat-footer-row>
-        </mat-table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-      </div>
+          <button mat-icon-button color="warn" (click)="onDeleteLine(j)">
+            <mat-icon>delete_outline</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="loading">
+        <mat-footer-cell *matFooterCellDef colspan="6">
+          Loading data...
+        </mat-footer-cell>
+      </ng-container>
+      <ng-container matColumnDef="noData">
+        <mat-footer-cell *matFooterCellDef colspan="6">
+          No data.
+        </mat-footer-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-footer-row *matFooterRowDef="['loading']" [ngClass]="{'hide':listData!=null}"></mat-footer-row>
+      <mat-footer-row *matFooterRowDef="['noData']" [ngClass]="{'hide':!(listData!=null && listData.data.length==0)}"></mat-footer-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  </div>
 </div>
