--- a/src/app/delnote/delnotecrud/delnotecrud.component.css
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.css
@@ -26,18 +26,15 @@ h4 {
     display: flex;
     flex-flow: column;
     height: 100%;
-    margin: 0px 5px;
-    width: 900px;
+    margin: 0px 0px;
+    width: 1000px;
 }
 
- .header {
-     align-self: flex-start;
-     flex-flow: row;
-     width: 100%;
- }
-
  .delnotehead {
-    padding: 15px;    
+    align-self: flex-start;
+    width: 100%;
+    padding: 5px;
+    flex-flow: column;
 }
 
 .delnotedetail1 {
@@ -64,3 +61,19 @@ h4 {
     margin: 0 5px;
 }
 
+.requestsgroup {
+    padding-top: 10px;
+}
+
+.requests {
+    padding: 0px 8px 0px 0px;
+    font-size: 10pt;
+    height: 10px;
+    width: 10px;
+}
+
+::ng-deep .mat-checkbox .mat-checkbox-inner-container {
+    padding: 0px 0px 0px 0px;
+    height: 10px;
+    width: 10px;
+}
