--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -1,31 +1,48 @@
-<h4>{{screenName}}</h4>
 <div class="container">
   <section class="delnote-form">
-    <form  (ngSubmit)="onSave()" [formGroup]="delnoteform" class="ordernote-form">
+    <form (ngSubmit)="onSave()" [formGroup]="delnoteform" class="ordernote-form">
+      <h4>{{screenName}}</h4>
 
-      <mat-grid-list cols="1" rowHeight="65px">
-        <mat-grid-tile>
-          <div class="header">
-            <mat-form-field class="delnotehead">
-              <input matInput [matDatepicker]="picker" [max]="maxDate" placeholder="Document Date" formControlName="DelNoteDocDate">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field class="delnotehead">
-              <input matInput [matDatepicker]="picker2" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate">
-              <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-              <mat-datepicker #picker2></mat-datepicker>
-            </mat-form-field>
+      <mat-grid-list cols="4" rowHeight="110px">
+        <div class="header1">
+          <mat-grid-tile>
+            <div class="delnotehead">
+              <mat-form-field>
+                <input matInput [matDatepicker]="picker" [max]="maxDate" placeholder="Document Date" formControlName="DelNoteDocDate">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+              <div class="requestsgroup">
+                <mat-checkbox class="requests">Diary</mat-checkbox>
+                <mat-checkbox class="requests">Calendar</mat-checkbox>
+                <mat-checkbox class="requests">Card</mat-checkbox>
+              </div>
+            </div>
+          </mat-grid-tile>
+          <mat-grid-tile>
+            <div class="delnotehead">
+              <mat-form-field>
+                <input matInput [matDatepicker]="picker2" placeholder="Delivery Date" formControlName="DelNoteDeliveryDate">
+                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                <mat-datepicker #picker2></mat-datepicker>
+              </mat-form-field>
+              <mat-form-field [ngStyle]="{'font-size.px': 11}">
+                <input matInput placeholder="Other" formControlName="DelRequestsOther">
+              </mat-form-field>
+            </div>
+          </mat-grid-tile>
+          <mat-grid-tile>
             <mat-form-field class="delnotehead">
               <input matInput placeholder="Delivery Time" formControlName="DelNoteDeliveryTime">
             </mat-form-field>
-
+          </mat-grid-tile>
+          <mat-grid-tile>
             <mat-form-field class="delnotehead">
-              <input matInput placeholder="Delivery Instructions" formControlName="DelInstructions">
+              <textarea matInput rows="3" placeholder="Custom Hamper Remarks" formControlName="DelInstructions">
+              </textarea>
             </mat-form-field>
-
-          </div>
-        </mat-grid-tile>
+          </mat-grid-tile>
+        </div>
       </mat-grid-list>
 
       <mat-grid-list cols="2" rowHeight="140px">
