--- a/src/app/menu/menumain/menumain.component.html
+++ b/src/app/menu/menumain/menumain.component.html
@@ -1,19 +1,21 @@
+<!DOCTYPE html>
+
 <body>
-<div>
+  <div>
     <mat-toolbar color="primary">
       <mat-toolbar-row>
+        <button mat-button [routerLink]="['']">Home</button>
         <button mat-button [matMenuTriggerFor]="Order">Order</button>
         <button mat-button [matMenuTriggerFor]="DeliveryNote">Delivery Note</button>
 
         <mat-menu #Order="matMenu" yPosition="below" [overlapTrigger]="false">
-          <button mat-menu-item>List Orders</button>
+          <button mat-menu-item [routerLink]="['delorder']"> List Orders</button>
         </mat-menu>
         <mat-menu #DeliveryNote="matMenu" yPosition="below" [overlapTrigger]="false">
-          <button mat-menu-item>List Delivery Notes</button>
+          <button mat-menu-item [routerLink]="['delnotelist']">List Delivery Notes</button>
         </mat-menu>
 
       </mat-toolbar-row>
     </mat-toolbar>
-    </div>
-    <div></div>
+  </div>
 </body>
