--- a/src/app/delnote/delnotecrud/delnotecrud.component.html
+++ b/src/app/delnote/delnotecrud/delnotecrud.component.html
@@ -13,9 +13,9 @@
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
               <div class="requestsgroup">
-                <mat-checkbox (change)="togglereqdiary()" color="primary" class="requests">Diary</mat-checkbox>
-                <mat-checkbox (change)="togglereqcalendar()" color="primary" class="requests">Calendar</mat-checkbox>
-                <mat-checkbox (change)="togglereqcard()" color="primary" class="requests">Card</mat-checkbox>
+                <mat-checkbox formControlName="CheckBoxDiary" (change)="togglereqdiary()" color="primary" class="requests">Diary</mat-checkbox>
+                <mat-checkbox formControlName="CheckBoxCalendar" (change)="togglereqcalendar()" color="primary" class="requests">Calendar</mat-checkbox>
+                <mat-checkbox formControlName="CheckBoxCard" (change)="togglereqcard()" color="primary" class="requests">Card</mat-checkbox>
               </div>
             </div>
           </mat-grid-tile>
